<resources>
    <string name="app_name">PrometeoApp3</string>
    <string name="mainImageView_Description">Logo de la aplicacion</string>
    <string name="mainTxtViewTitulo_String">Entrar a IES LAS SALINAS</string>
    <string name="mainEdtUsuario_String">Usuario</string>
    <string name="mainEdtContrasena_String">Contraseña</string>
    <string name="mainEdtNombre_string">Nombre</string>
    <string name="mainBtnAcceder_String">Acceder</string>
    <string name="mainCheckBox_String">Nombre Por Defecto</string>
    <string name="itemActuacionesBottonNavigation_String">Actuaciones</string>
    <string name="itemNotasBottonNavigation_String">Notas</string>
    <string name="itemFaltasBottonNavigation_String">Faltas</string>
    <string name="txtViewNombreProfesorItem_String">Jose Luis Vélez Gónzales</string>
    <string name="txtViewOtrasInformacionesItem_String">Otras Informaciones</string>
    <string name="txtViewFechaHoraItem_String">2025-03-01</string>
    <string name="txtViewComentarioItem_string">Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografí
        as o de borradores de diseño para probar el diseño visual antes de insertar el texto final. Aunque no posee actu
        almente fuentes para justificar sus hipótesis, el profesor de filología clásica Richard McClintock asegura que su uso
        se remonta a los impresores de comienzos del siglo XVI. Su uso en algunos editores de texto muy conocidos en la actua
        lidad ha dado al texto lorem ipsum nueva popularidad.Lorem ipsum es el texto que se usa habitualmente en diseño gráfico
        en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.
        Aunque no posee actualmente fuentes para justificar sus hipótesis, el profesor de filología clásica Richard McClintock aseg
        ura que su uso se remonta a los impresores de comienzos del siglo XVI. Su uso en algunos editores de texto muy conocidos en
        la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño
        para probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipóte
        sis, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del sigl
        o XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño p
        ara probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipótes
        is, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo
        XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
    Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño
        para probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipóte
        sis, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo
        XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
    Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para
        probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipótesis, el
        profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo XVI. Su
        uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.</string>
    <string name="txtViewTituloDetallesItem_string">Actuacion particular Detalle</string>
    <string name="txtViewTipoActuacionDetallesItem_string">Parte Disciplinario</string>
    <string name="txtViewLogoInicialDetallesItem_string">A</string>
    <string name="txtViewNombreProfesorDetallesItem_string">Ángela Reina</string>
    <string name="txtViewFechaDetallesItem_string">01/02/2026</string>
    <string name="txtViewDetallesItem1_string">Comentario:</string>
    <string name="txtViewComentarioDetallesItem_string">Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografí
        as o de borradores de diseño para probar el diseño visual antes de insertar el texto final. Aunque no posee actu
        almente fuentes para justificar sus hipótesis, el profesor de filología clásica Richard McClintock asegura que su uso
        se remonta a los impresores de comienzos del siglo XVI. Su uso en algunos editores de texto muy conocidos en la actua
        lidad ha dado al texto lorem ipsum nueva popularidad.Lorem ipsum es el texto que se usa habitualmente en diseño gráfico
        en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.
        Aunque no posee actualmente fuentes para justificar sus hipótesis, el profesor de filología clásica Richard McClintock aseg
        ura que su uso se remonta a los impresores de comienzos del siglo XVI. Su uso en algunos editores de texto muy conocidos en
        la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño
        para probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipóte
        sis, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del sigl
        o XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño p
        ara probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipótes
        is, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo
        XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño
        para probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipóte
        sis, el profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo
        XVI. Su uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.
        Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para
        probar el diseño visual antes de insertar el texto final. Aunque no posee actualmente fuentes para justificar sus hipótesis, el
        profesor de filología clásica Richard McClintock asegura que su uso se remonta a los impresores de comienzos del siglo XVI. Su
        uso en algunos editores de texto muy conocidos en la actualidad ha dado al texto lorem ipsum nueva popularidad.</string>
    <string name="itemEditarCuentaPopupMenu_string">Editar</string>
    <string name="itemElminarCuentaPopupMenu_string">Eliminar</string>
    <string name="imgLogoEditarCuenta_Description">logo prometeo para editarCuenta Activity</string>
    <string name="txtViewTituloEditarCuenta_String">Editar Cuenta IES LAS SALINAS</string>
    <string name="txtViewUsuarioEditarCuenta_String">Usuario</string>
    <string name="edtContrasenaEditarCuenta_String">Contraseña</string>
    <string name="edtNombreEditarCuenta_String">Nombre</string>
    <string name="btnCancelarEditarCuenta_String">Cacelar</string>
    <string name="btnEditarEditarCuenta_String">Editar</string>
    <string name="imgButtonEvaluacionItemLayout_String">boton para desplegar la evaluacion y ver las asiganturas o grupos</string>
    <string name="txtViewTituloEvaluacionEvaluacionItemLayout_String">Título Evaluación</string>
    <string name="imgButtonAsignaturaItemLayout_String">boton para desplegar la asigantura y ver las actividades o grupos</string>
    <string name="txtViewTituloAsignaturaAsignaturaItemLayout_String">Título Asignatura</string>
    <string name="tituloActividad_actividadItemLayout_String">Actividad:</string>
    <string name="nombreProfesor_actividadItemLayout_String">Profesor:</string>
    <string name="fechaActividad_actividadItemLayout_String">Fecha:</string>
    <string name="notaActividad_actividadItemLayout_String">Nota:</string>
    <string name="title_activity_detalles_item_evaluaciones">DetallesItemEvaluacionesActivity
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="editar">Editar</string>
    <string name="cuentas_ies_las_salinas">Cuentas IES LAS SALINAS</string>
    <string name="usuarios">Usuarios:</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="luis_german">LUIS GERMAN</string>
</resources>