<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoOscuro"
    tools:context=".controlador.CuentasActivity.CuentasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVolverActivityCuentas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/transparente"
                android:onClick="volverAtras"
                app:icon="@drawable/ic_volver"
                app:iconGravity="textStart"
                app:iconSize="28dp"
                app:iconTint="@color/blancoHueso"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:text="@string/cuentas_ies_las_salinas"
                android:textColor="@color/blancoHueso"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtViewLogoInicialCuentas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/fondo_circular"
            android:gravity="center"
            android:text="@string/txtViewLogoInicialDetallesItem_string"
            android:textAllCaps="true"
            android:textColor="@color/moradoNormal"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewNombreSesion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/luis_german"
            android:textColor="@color/blancoHueso"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="67dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blancoHueso"
                android:onClick="irEditar"
                android:text="@string/editar"
                android:textColor="@color/moradoOscuro" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:layout_width="127dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/blancoHueso"
                android:onClick="CerrarSesion"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/moradoOscuro" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:text="@string/usuarios"
            android:textColor="@color/blancoHueso"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvActivityCuentas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_rv_cuentas"
            android:onClick="irEditarCrearCuenta"
            android:paddingTop="10dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imgbVolverActivityCuentas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/ic_addusuario"
        android:contentDescription="@string/mainImageView_Description"
        android:elevation="10dp"
        android:onClick="irAnadirCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>