<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="335dp"
        android:layout_height="332dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewTitulo_main_layout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/mainTxtViewTitulo_String"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtUsuario_main_layout"
                android:layout_width="271dp"
                android:layout_height="59dp"
                android:layout_marginBottom="6dp"
                android:autoText="false"
                android:autofillHints=""
                android:background="@drawable/border_radius"
                android:ems="10"
                android:hint="@string/mainEdtUsuario_String"
                android:inputType="text"
                android:paddingStart="15dp"
                android:textAlignment="textStart"
                android:textColorHint="#757575"
                tools:ignore="Deprecated,RtlSymmetry" />

            <EditText
                android:id="@+id/edtContrasena_main_layout"
                android:layout_width="271dp"
                android:layout_height="59dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:background="@drawable/border_radius"
                android:ems="10"
                android:hint="@string/mainEdtContrasena_String"
                android:inputType="text|textPassword"
                android:paddingStart="15dp"
                android:textColorHint="#757575"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btnAceder_main_layout"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/moradoNormal"
                android:onClick="Aceder"
                android:text="@string/mainBtnAcceder_String"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="107dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/mainImageView_Description"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/prometeo_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="IES LAS SALINAS ©2024"
        android:textColorHint="#D5FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>