<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blancoHueso"
    android:clipToPadding="false"
    tools:context=".controlador.DetallesItemActuacionesActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnVolverDetallesItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/transparente"
            android:onClick="volverAtras"
            app:icon="@drawable/ic_volver"
            app:iconGravity="textStart"
            app:iconSize="28dp"
            app:iconTint="@color/moradoOscuro"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewTipoActuacionDetallesItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/txtViewTipoActuacionDetallesItem_string"
                android:textColor="@color/azulCianOscuro"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|right|end"
                    android:orientation="vertical"
                    android:paddingStart="20dp"
                    tools:ignore="RtlHardcoded,RtlSymmetry">

                    <TextView
                        android:id="@+id/txtViewLogoInicialDetallesItem"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/fondo_circular2"
                        android:gravity="center"
                        android:text="@string/txtViewLogoInicialDetallesItem_string"
                        android:textAllCaps="true"
                        android:textColor="@color/blancoHueso"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtViewNombreProfesorDetallesItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxWidth="200dp"
                    android:text="@string/txtViewNombreProfesorDetallesItem_string"
                    android:textColor="@color/moradoNormal"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/txtViewFechaDetallesItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="5dp"
                    android:text="@string/txtViewFechaDetallesItem_string"
                    android:textColor="@color/moradoOscuro"
                    android:textSize="14sp"
                    android:textStyle="normal|bold"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtViewDetallesItem1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtViewDetallesItem1_string"
                android:textColor="@color/azulCianOscuro"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/txtViewComentarioDetallesItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/fondo_texto"
                android:minHeight="450dp"
                android:paddingLeft="18dp"
                android:paddingTop="18dp"
                android:paddingRight="18dp"
                android:paddingBottom="18dp"
                android:text="@string/txtViewComentarioDetallesItem_string"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:text=" © 2024  IES LAS SALINAS,  Seseña nuevo.\n\n le enviamos este mensaje para comunicarle el progreso del alumno en el centro escolar, de parte de Ies las salinas, muchas gracias." />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>